Wed Jan 10 21:01:36 1996  Theodore Y. Ts'o  <tytso@dcl>

	* init_ctx.c (krb5_init_context): Added checking of profile for
	        DCE compatability options (ccache type, and checksum type).

	* fwd_tgt.c (krb5_fwd_tgt_creds): Initialize addrs to 0 so that we
		don't try to free stack garbage on an error.

	* krbconfig.c, Makefile.in: Removed krbconfig.c; it contained
		global variables which are no longer used.

	* recvauth.c: Removed the global extern of
		krb5_kdc_default_options, which wasn't being used anyway.

	* mk_req.c (krb5_mk_req): Replace use of krb5_kdc_default_options
		with context->kdc_default_options.

	* gc_frm_kdc.c: Remove the global extern of krb5_kdc_req_sumtype,
		which wasn't being used anymore anyway.

	* send_tgs.c (krb5_send_tgs_basic): Remove use of the global
		variable krb5_kdc_req_sumtype, and use the kdc_req_sumtype
		in the context structure instead.

	* walk_rtree.c (krb5_walk_realm_tree): Applied patch submitted by
		Doug Engbert, so that the configurable authentication
		patch takes into account the null entry at the end of the
		list.

Tue Jan  9 22:04:09 1996  Theodore Y. Ts'o  <tytso@dcl>

	* fwd_tgt.c (krb5_fwd_tgt_creds): New function which handles all
		of the dirty work of forwarding TGT's.

	* rd_cred.c (krb5_rd_cred_basic): Clean up memory allocation
		discpline to remove memory leaks.

	* mk_cred.c (krb5_mk_ncred_basic, krb5_mk_ncred, krb5_mk_1cred):
		Clean up memory allocation discpline to remove memory
		leaks.

	* init_ctx.c (krb5_get_tgs_ktypes): Clean up parsing of the etype
		list.  Don't overrun the string containing the etype list.

Wed Jan  3 21:32:59 1996  Theodore Y. Ts'o  <tytso@dcl>

	* rd_cred.c (krb5_rd_cred_basic): When the keyblock is NULL,
		assume we're being called from the gssapi code, which
		doesn't have access to the sender or receive address
		information, don't check the sender address, since it
		won't be available.

	* rd_cred.c (decrypt_credencdata): When calling krb5_rd_credd(),