@@ -76,7 +76,7 @@ krb5_mk_req(context, auth_context, ap_req_options, service, hostname, in_data,
     if ((retval = krb5_cc_get_principal(context, ccache, &creds.client)))
 	goto cleanup_creds;
 
-    if ((retval = krb5_get_credentials(context, context->kdc_default_options,
+    if ((retval = krb5_get_credentials(context, 0,
 				       ccache, &creds, &credsp)))
 	goto cleanup_creds;
 
